test/libsolidity/syntaxTests/comments/singleline_unicode_direction_override_6.sol
contract C {
    function f() public pure
    {
        // first pop, then push
        // underflow ‬‮
    }
}
// ----
// ParserError 8936: (88-104): Unicode direction override underflow in comment.
